@@ -2130,6 +2130,7 @@ a.jgrid:hover {	text-decoration: none;}
 .icon-32-remove						{	background-image: url(../images/toolbar/icon-32-remove.png);	}
 .icon-32-featured					{	background-image: url(../images/toolbar/icon-32-featured.png);	}
 .icon-32-stats						{	background-image: url(../images/toolbar/icon-32-stats.png);	}
+.icon-32-print						{	background-image: url(../images/toolbar/icon-32-print.png);	}
 .toolbar-inactive					{	background-position: 0 32px;  }
 
 /* -- HEADER ICON STYLES ----------------------------- */
